Updated font name correctly

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -18,7 +18,7 @@
 }
 
 .header__span-accent {
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -27,7 +27,7 @@
 }
 
 .header__description {
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
