--- a/blocks/about.css
+++ b/blocks/about.css
@@ -32,7 +32,7 @@
 }
 
 .about__content {
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
