Made few changes based on automation test in css

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -24,7 +24,7 @@
 
 .menu__subtitle {
   text-align: center;
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -64,7 +64,7 @@
 }
 
 .card__list-item {
-  font-family: Noto Serif;
+  font-family: Noto serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
