Checkboz size changed

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -36,7 +36,7 @@
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 80px;
-  max-width: 580px;
+  width: 680px;
 }
 
 .header__image {
@@ -49,19 +49,22 @@
 }
 
 .header__footer {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  position: absolute;
   left: 80px;
   right: 80px;
   bottom: 40px;
-  color: #838383;
+  position: absolute;
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  box-sizing: border-box;
   z-index: 1;
+}
+
+.header__paragraph {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
 }
