--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,7 @@
 .footer {
   box-sizing: border-box;
   color: #ffffff;
-  padding: 60px 80px 60px 80px;
+  padding: 60px 100px 60px 80px;
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
 }
 
@@ -13,12 +13,12 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  margin-bottom: 0px;
 }
 
 .footer__logo {
   width: 153px;
   height: 32px;
-  right: 80px;
   margin-top: 0;
 }
 
@@ -56,8 +56,9 @@
   margin-right: 10px;
 }
 
-.footer__copyrights {
+.footer__copyright {
   margin-top: 108px;
+  margin-bottom: 60px;
 }
 
 .footer__social-link:hover {
