--- a/blocks/header.css
+++ b/blocks/header.css
@@ -54,11 +54,6 @@
   bottom: 40px;
   position: absolute;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  z-index: 1;
 }
 
 .header__paragraph {
@@ -67,4 +62,12 @@
   font-size: 16px;
   line-height: 20px;
   color: #838383;
+  margin: 0;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  z-index: 1;
 }
