--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -76,6 +76,10 @@
   line-height: 20px;
 }
 
+.card__list-item:last-of-type {
+  margin-bottom: 0px;
+}
+
 .card__list-divider {
   display: flex;
   flex-grow: 1;
