--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -39,6 +39,12 @@
   gap: 40px;
 }
 
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+  border: none;
+}
+
 .recipes__video-caption {
   padding-top: 24px;
   padding-bottom: 215px;
