--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -31,6 +31,10 @@
   line-height: 30px;
 }
 
+.recipes__video {
+  width: 480px;
+}
+
 .recipes__videos {
   padding-top: 80px;
   position: relative;
@@ -40,7 +44,7 @@
 }
 
 .recipes__iframe {
-  width: 480px;
+  width: 100%;
   height: 273px;
   border: none;
 }
