Minor changes done after 2nd review

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -45,7 +45,7 @@
 
 .about__paragraph {
   margin: 0;
-  font-family: "Noto Serif", "Times New Roman";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
