--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -24,7 +24,7 @@
   margin-left: 80px;
   margin-top: 24px;
   margin-bottom: 0;
-  font-family: Noto serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
