--- a/blocks/header.css
+++ b/blocks/header.css
@@ -21,7 +21,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: Noto serif;
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -34,7 +34,7 @@
   margin-bottom: 0;
   margin-left: 80px;
   width: 680px;
-  font-family: "Noto serif", "Times New Roman";
+  font-family: "Noto serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
