Minor changes done after 2nd review

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -34,7 +34,7 @@
   margin-bottom: 0;
   margin-left: 80px;
   width: 680px;
-  font-family: "Noto serif", "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
