--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -28,7 +28,7 @@
   max-width: 780px;
   word-wrap: break-word;
   margin: 0;
-  font-family: "Noto serif", "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
