--- a/blocks/card.css
+++ b/blocks/card.css
@@ -23,7 +23,7 @@
   margin-bottom: 16px;
   display: flex;
   align-items: baseline;
-  font-family: "Noto serif", "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
