--- a/blocks/header.css
+++ b/blocks/header.css
@@ -21,7 +21,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto serif", "Times New Roman", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
